# halreslib

./: Cargo.toml  README.md  Rocket.toml  halreslib.sqlite
_work/data/: halreslib.sqlite.sql  urls.csv
_work/data/json/: uri_dates.json  uris.json
_work/sql/: database_scheme.sql
exchange/urls/: urls.csv  urls_testset.csv
src/: lib.rs  main.rs  url.rs
www/static/autoComplete/css/: autoComplete.02.css  autoComplete.css  autoComplete.khwmsg.css
www/static/start/: start.js
www/templates/common/: footer.html.tera  header.html.tera  navbar.html.tera
www/templates/generic/: generic-sample.html.tera
www/templates/start/: start.html.tera
